# commonLit_readability_prize

./: .gitignore  Makefile  README.md  build_env.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: paper_summary_template.md
config/: config.yaml
data/extend/pretrained_roberta/: README.md
data/extend/roberta_itpt/: README.md  config.json
data/kaggle_dataset/pretrained_roberta/: dataset-metadata.json
data/models/: dataset-metadata.json
data/models/distilroberta-base/: best_checkpoints_0.508107±0.0156.txt
data/models/distilroberta-base/ridge/: score.txt
data/models/distilroberta-base/svr/: score.txt
data/models/distilroberta-base/xgb/: score.txt
data/models/further-trained-roberta/: best_checkpoints_0.498700±0.0136.txt
data/models/roberta-base/: best_checkpoints_0.499533±0.0164.txt  best_checkpoints_0.525120±0.1062.txt
data/models/roberta-base/ridge/: score.txt
data/versions/: config.yaml  experiment.csv
data/versions/RoBERTa-Baseline/: best_checkpoints_0.496413±0.0162.txt  best_checkpoints_0.507907±0.0402.txt  best_checkpoints_0.524520±0.0497.txt  best_checkpoints_0.530900±0.0000.txt  best_checkpoints_0.536233±0.0865.txt
docs/: CatchUpDiscussion.md  CatchUpNotebooks.md  CompetitionOverview.md  Discussion.md
notebook/: Debug.ipynb  RoBERTa.ipynb  RoBERTa_withPreTrainedEmbbed.ipynb  RobertaForSequenceClassification.ipynb  XLM-RoBERTa.ipynb
src/: dataset.py  model.py  models.py  preprocessing.py  split.py  stack.py  submission.py  tmp.py  train.py  train_stage2.py
src/utils/: common.py  train_function.py
tests/: test_dataset.py  test_model.py
(+10 files in other folders)
